# fojin-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DATA_LICENSE  LICENSE-APACHE  README.md  SECURITY.md  install.sh  schema.sql
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-1-report.md
data-pipeline/: README.md  export_parallels.py  requirements.txt
data-pipeline/tests/: test_normalize_parity.py
docs/superpowers/plans/: 2026-07-11-streaming-data-download.md
docs/superpowers/specs/: 2026-07-11-streaming-data-download-design.md
examples/: README.md  batch-query.sh  jq-extract.sh  python_call.py
examples/claude/: CLAUDE-snippet.md  README.md
examples/claude/commands/: parallel.md
scripts/: check-release-archive.sh  check-release-availability.sh  check-release-version.sh
src/: cli.rs  data.rs  lib.rs  main.rs  model.rs  normalize.rs  query.rs  render.rs  schema.rs
src/data/: operation_lock.rs  transfer.rs
tests/: cli.rs  command.rs  data.rs  install-script.sh  normalize.rs  query.rs  release-scripts.sh  render.rs  schema.rs  smoke.rs
tests/fixtures/: norm_cases.tsv  norm_map.tsv
